feat(journey-maps): adjust disabled state and refactor style

--- a/src/journey-maps/angular/components/feature-event-listener/feature-event-listener.html
+++ b/src/journey-maps/angular/components/feature-event-listener/feature-event-listener.html
@@ -16,7 +16,7 @@
   [template]="overlayTemplate"
   [templateContext]="overlayFeatures"
   [withPaginator]="true"
-  [styleMode]="styleMode"
+  [isDarkMode]="isDarkMode"
   (closeClicked)="onOverlayClosed()"
   (mouseEvent)="onOverlayMouseEvent($event)"
   *ngIf="!overlayIsPopup"
