--- a/src/journey-maps/angular/components/marker-details/marker-details.html
+++ b/src/journey-maps/angular/components/marker-details/marker-details.html
@@ -4,7 +4,7 @@
   (closeClicked)="closeClicked.next()"
   [template]="template!"
   [attr.aria-live]="'polite'"
-  [styleMode]="styleMode"
+  [isDarkMode]="isDarkMode"
   *ngIf="!popup"
 ></sbb-teaser>
 <sbb-popup
