feat(journey-maps): add dark-mode to horizontal level-switch

--- a/src/journey-maps/angular/components/level-switch/level-switch-horizontal.scss
+++ b/src/journey-maps/angular/components/level-switch/level-switch-horizontal.scss
@@ -10,6 +10,8 @@
   text-align: center;
   vertical-align: middle;
   width: 36px;
+  background-color: esta.$sbbColorWhite;
+  color: esta.$sbbColorBlack;
 
   @include esta.mq($from: tabletPortrait) {
     @at-root .map-control-container.small-buttons #{&} {
@@ -17,14 +19,14 @@
       width: 26px;
     }
   }
+
+  @at-root .map-control-container.dark #{&} {
+    background-color: esta.$sbbColorBlack;
+    color: esta.$sbbColorWhite;
+  }
 }
 
-.map-control-button:hover,
-.map-control-button-selected {
-  @extend .map-control-button;
-  background-color: esta.$sbbColorCharcoal;
-  color: white;
-}
+@include f.map-control-button-hover;
 
 .button-container {
   display: flex;
@@ -42,17 +44,22 @@
     max-width 0.5s ease,
     visibility 0s linear 0.5s;
   visibility: hidden; /* Initially not visible */
-  right: v.$controlsMargin + (v.$controlsWidth / 2);
-  border-top-left-radius: (v.$controlsWidth / 2);
-  border-bottom-left-radius: (v.$controlsWidth / 2);
+  right: v.$controlsMargin + calc(v.$controlsWidth / 2);
+  border-top-left-radius: calc(v.$controlsWidth / 2);
+  border-bottom-left-radius: calc(v.$controlsWidth / 2);
   background-color: esta.$sbbColorWhite;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 
   @include esta.mq($from: tabletPortrait) {
     @at-root .map-control-container.small-buttons #{&} {
-      right: v.$controlsMarginSmall + (v.$controlsWidthSmall / 2);
-      border-top-left-radius: (v.$controlsWidthSmall / 2);
-      border-bottom-left-radius: (v.$controlsWidthSmall / 2);
+      right: v.$controlsMarginSmall + calc(v.$controlsWidthSmall / 2);
+      border-top-left-radius: calc(v.$controlsWidthSmall / 2);
+      border-bottom-left-radius: calc(v.$controlsWidthSmall / 2);
     }
+  }
+
+  @at-root .map-control-container.dark #{&} {
+    outline: 1px solid esta.$sbbColorMetal;
   }
 }
 
@@ -79,6 +86,10 @@
   border-radius: 50%;
   z-index: 3;
   background-color: esta.$sbbColorWhite;
+
+  @at-root .map-control-container.dark #{&} {
+    outline: 1px solid esta.$sbbColorMetal;
+  }
 }
 
 .main-button-wrapper.expanded {
@@ -91,14 +102,18 @@
 
 .map-control-button-wrapper {
   user-select: none; /* prevent visually selecting the text of the buttons */
+
+  @at-root .map-control-container.dark #{&} {
+    background-color: esta.$sbbColorBlack;
+  }
 }
 
 .map-control-button-wrapper.half-width {
-  width: v.$controlsWidth / 2;
+  width: calc(v.$controlsWidth / 2);
 
   @include esta.mq($from: tabletPortrait) {
     @at-root .map-control-container.small-buttons #{&} {
-      width: v.$controlsWidthSmall / 2;
+      width: calc(v.$controlsWidthSmall / 2);
     }
   }
 }
