--- a/src/journey-maps/angular/style/_functions.scss
+++ b/src/journey-maps/angular/style/_functions.scss
@@ -154,3 +154,20 @@
     }
   }
 }
+
+@mixin map-control-button-hover {
+  .map-control-button:hover,
+  .map-control-button-selected {
+    @extend .map-control-button;
+    background-color: esta.$sbbColorCharcoal;
+    color: esta.$sbbColorWhite;
+  }
+
+  @at-root .map-control-container.dark #{&} {
+    .map-control-button:hover,
+    .map-control-button-selected {
+      background-color: esta.$sbbColorSmoke;
+      color: esta.$sbbColorBlack;
+    }
+  }
+}
