feat(journey-maps): add missing border-radius
Refs: ROKAS-1723

--- a/src/journey-maps/angular/components/level-switch/level-switch-horizontal.scss
+++ b/src/journey-maps/angular/components/level-switch/level-switch-horizontal.scss
@@ -96,6 +96,11 @@
     background-color: esta.$sbbColorBlack;
     outline: 1px solid esta.$sbbColorMetal;
   }
+
+  .map-control-button-wrapper {
+    /* needed if :not(.empty) */
+    border-radius: 50%;
+  }
 }
 
 .main-button-wrapper.expanded {
