feat(journey-maps): add new icon to horizontal level switch (#2154)
* feat(journey-maps): add new icon to horizontal level switcher

Refs: ROKAS-1723

* feat(journey-maps): add missing border-radius

Refs: ROKAS-1723

--- a/src/journey-maps/angular/components/level-switch/level-switch-horizontal.scss
+++ b/src/journey-maps/angular/components/level-switch/level-switch-horizontal.scss
@@ -83,12 +83,23 @@
 }
 
 .main-button-wrapper {
+  &.empty {
+    @include f.map-control-icon;
+    @include f.map-control-icon-button('layers-with-arrows');
+  }
+
   border-radius: 50%;
   z-index: 3;
   background-color: esta.$sbbColorWhite;
 
   @at-root .map-control-container.dark #{&} {
+    background-color: esta.$sbbColorBlack;
     outline: 1px solid esta.$sbbColorMetal;
+  }
+
+  .map-control-button-wrapper {
+    /* needed if :not(.empty) */
+    border-radius: 50%;
   }
 }
 
