fix(journey-maps): keep side buttons open while mouseover events keep happening
Refs: ROKAS-1723

--- a/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
+++ b/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
@@ -13,6 +13,7 @@
             #sideButton
             class="side-button"
             (focus)="startCountdown()"
+            (mouseover)="startCountdown()"
             (click)="onSideButtonClick(level)"
             (keydown.enter)="onSideButtonEnter(level, $event)"
             [ngClass]="{
