--- a/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
+++ b/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
@@ -12,7 +12,10 @@
           <button
             #sideButton
             class="side-button"
-            (focus)="startCountdown()"
+            (focus)="cancelCountdown()"
+            (blur)="startCountdown()"
+            (mouseover)="cancelCountdown()"
+            (mouseout)="startCountdown()"
             (click)="onSideButtonClick(level)"
             (keydown.enter)="onSideButtonEnter(level, $event)"
             [ngClass]="{
