fix(journey-maps): use other color for disabled

--- a/src/journey-maps/angular/style/_functions.scss
+++ b/src/journey-maps/angular/style/_functions.scss
@@ -149,7 +149,7 @@
 
       &:disabled {
         cursor: default;
-        background-color: esta.$sbbColorAnthracite;
+        background-color: esta.$sbbColorGranite;
       }
     }
   }
