feat(journey-maps): forced hcm colors to not overwrite

--- a/src/journey-maps/angular/components/level-switch/level-switch-horizontal.scss
+++ b/src/journey-maps/angular/components/level-switch/level-switch-horizontal.scss
@@ -128,3 +128,15 @@
     }
   }
 }
+
+@media (forced-colors: active) {
+  .main-button-wrapper {
+    /* Tell Windows not to change styles for this component */
+    forced-color-adjust: none;
+  }
+
+  .side-buttons-container {
+    /* Tell Windows not to change styles for this component */
+    forced-color-adjust: none;
+  }
+}
