fix(journey-maps): prevent opening side buttons on timeout
Refs: ROKAS-1723

--- a/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
+++ b/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
@@ -13,9 +13,9 @@
             #sideButton
             class="side-button"
             (focus)="cancelCountdown()"
-            (blur)="startCountdown()"
+            (blur)="onSideButtonsLeave()"
             (mouseover)="cancelCountdown()"
-            (mouseout)="startCountdown()"
+            (mouseout)="onSideButtonsLeave()"
             (click)="onSideButtonClick(level)"
             (keydown.enter)="onSideButtonEnter(level, $event)"
             [ngClass]="{
