feat(journey-maps): improved focus colors

--- a/src/journey-maps/angular/style/_functions.scss
+++ b/src/journey-maps/angular/style/_functions.scss
@@ -157,6 +157,7 @@
 
 @mixin map-control-button-hover {
   .map-control-button:hover,
+  .map-control-button:focus-within,
   .map-control-button-selected {
     @extend .map-control-button;
     background-color: esta.$sbbColorCharcoal;
@@ -165,6 +166,7 @@
 
   @at-root .map-control-container.dark #{&} {
     .map-control-button:hover,
+    .map-control-button:focus-within,
     .map-control-button-selected {
       background-color: esta.$sbbColorSmoke;
       color: esta.$sbbColorBlack;
