feat(journey-maps): optimize on focus of sidebuttons

--- a/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
+++ b/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
@@ -12,7 +12,7 @@
           <button
             #sideButton
             class="side-button"
-            (focus)="cancelCountdown()"
+            (focus)="onSideButtonFocus()"
             (blur)="onSideButtonsLeave()"
             (mouseover)="cancelCountdown()"
             (mouseout)="onSideButtonsLeave()"
