Revert "feat(journey-maps): optimize on focus of sidebuttons"
This reverts commit 7ec6d5c952821bd34bb5eeac776f6efc57613443.

--- a/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
+++ b/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
@@ -12,7 +12,7 @@
           <button
             #sideButton
             class="side-button"
-            (focus)="onSideButtonFocus()"
+            (focus)="cancelCountdown()"
             (blur)="onSideButtonsLeave()"
             (mouseover)="cancelCountdown()"
             (mouseout)="onSideButtonsLeave()"
