--- a/src/angular/sidebar/sidebar/sidebar.scss
+++ b/src/angular/sidebar/sidebar/sidebar.scss
@@ -73,11 +73,13 @@
   bottom: 0;
   width: calc(#{sbb.pxToRem(300)} * var(--sbb-scaling-factor));
   transform: translate3d(-100%, 0, 0);
-  border-right: var(--sbb-border-width-thin) solid var(--sbb-sidebar-border-right-color);
+  border-right: var(--sbb-border-width-thin) solid var(--sbb-sidebar-border-color);
   background-color: var(--sbb-sidebar-background-color);
 
   &:where(.sbb-sidebar-end) {
     right: 0;
+    border-right: 0;
+    border-left: var(--sbb-border-width-thin) solid var(--sbb-sidebar-border-color);
   }
 
   // Usually the `visibility: hidden` added by the animation is enough to prevent focus from
