feat: allow mutliple sidebars

--- a/src/angular/sidebar/sidebar/sidebar.scss
+++ b/src/angular/sidebar/sidebar/sidebar.scss
@@ -80,6 +80,7 @@
     right: 0;
     border-right: 0;
     border-left: var(--sbb-border-width-thin) solid var(--sbb-sidebar-border-color);
+    transform: translate3d(100%, 0, 0);
   }
 
   // Usually the `visibility: hidden` added by the animation is enough to prevent focus from
@@ -102,6 +103,12 @@
   z-index: 4;
   box-shadow: var(--sbb-box-shadow-width) 0 0 0 var(--sbb-box-shadow-color);
   border-right: var(--sbb-border-width-thin) solid var(--sbb-color-granite);
+
+  &:where(.sbb-sidebar-end) {
+    border-right: 0;
+    border-left: var(--sbb-border-width-thin) solid var(--sbb-color-granite);
+    box-shadow: calc(var(--sbb-box-shadow-width) * -1) 0 0 0 var(--sbb-box-shadow-color);
+  }
 }
 
 .sbb-sidebar-inner-container {
