feat(journey-maps): only import extra files, where needed, line wrap for styles and navigation c

--- a/src/components-examples/journey-maps/angular/journey-maps-map-navigation/journey-maps-map-navigation-example.css
+++ b/src/components-examples/journey-maps/angular/journey-maps-map-navigation/journey-maps-map-navigation-example.css
@@ -24,6 +24,7 @@ sbb-notification.api-key-info {
   margin-top: 1rem;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .sbb-navigation .row-2 {
