--- a/src/angular/tooltip/tooltip.scss
+++ b/src/angular/tooltip/tooltip.scss
@@ -46,6 +46,25 @@
     .sbb-tooltip-panel-right & {
       margin-left: var(--sbb-tooltip-arrow-horizontal-space);
     }
+
+    :is(.sbb-tooltip-panel-before, .sbb-tooltip-panel-after) & {
+      top: 0;
+      bottom: 0;
+      margin-top: auto;
+      margin-bottom: auto;
+    }
+
+    .sbb-tooltip-panel-after & {
+      left: calc(0.5 * var(--sbb-tooltip-shadow-arrow-size));
+      right: auto;
+      transform: rotate(315deg);
+    }
+
+    .sbb-tooltip-panel-before & {
+      left: auto;
+      right: calc(0.5 * var(--sbb-tooltip-shadow-arrow-size));
+      transform: rotate(135deg);
+    }
   }
 
   &::before {
@@ -72,6 +91,14 @@
 
   .sbb-tooltip-panel-above & {
     margin-bottom: calc(#{sbb.pxToRem(12)} * var(--sbb-scaling-factor));
+  }
+
+  .sbb-tooltip-panel-after & {
+    margin-left: calc(#{sbb.pxToRem(12)} * var(--sbb-scaling-factor));
+  }
+
+  .sbb-tooltip-panel-before & {
+    margin-right: calc(#{sbb.pxToRem(12)} * var(--sbb-scaling-factor));
   }
 }
 
