fix(angular/badge): fix badge positioning on icon
This fixes the positioning of badges on icons. Since I couldn't find any cases where the badge was positioned "above" on an icon, I would not consider this fix as a breaking change.

Fixes #2225

--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -1746,6 +1746,11 @@ textarea {
     right: 0;
   }
 
+  :where(.sbb-icon):is(.sbb-badge-above, .sbb-badge-after) & {
+    top: calc(#{sbb.pxToRem(-2)} * var(--sbb-scaling-factor));
+    right: 0;
+  }
+
   .sbb-badge-hidden & {
     display: none;
   }
