docs: update links to digital.sbb.ch

--- a/src/showcase/app/introduction/introduction.component.html
+++ b/src/showcase/app/introduction/introduction.component.html
@@ -42,14 +42,14 @@
   large amount of whitespace and supports responsive design for mobile, tablet, desktop, 4k and 5k.
   The intended usage of our components in this variant are more limited according to the design
   specification at
-  <a href="https://digital.sbb.ch/en/websites">Design System Web</a>.
+  <a href="https://digital.sbb.ch/en/design-system/legacy">Design System Web</a>.
 </p>
 
 <h4>Lean</h4>
 <p>
   Lean uses a compact design and supports responsive design for mobile, tablet and desktop. The
   components are more flexible in their usage as specified at
-  <a href="https://digital.sbb.ch/en/webapps">Design System Lean Applications</a>.
+  <a href="https://digital.sbb.ch/en/design-system/lean/">Design System Lean Applications</a>.
 </p>
 
 <p>
