feat(journey-maps): enable map rotation and pitch
Refs: ROKAS-2162

--- a/src/journey-maps/angular/components/compass-button/compass-button.html
+++ b/src/journey-maps/angular/components/compass-button/compass-button.html
@@ -9,6 +9,7 @@
       type="button"
       (click)="onCompassButtonClicked()"
       class="map-control-button"
+      [style.transform]="'rotate(' + bearing + 'deg)'"
       [attr.aria-label]="compassButtonLabel"
     ></button>
   </div>
