feat(journey-maps): enable map rotation and pitch
Refs: ROKAS-2162

--- a/src/journey-maps/angular/components/compass-button/compass-button.html
+++ b/src/journey-maps/angular/components/compass-button/compass-button.html
@@ -10,6 +10,7 @@
       (click)="onCompassButtonClicked()"
       class="map-control-button"
       [style.transform]="'rotate(' + bearing + 'deg)'"
+      [style.transition]="'transform 0.3s ease-in-out'"
       [attr.aria-label]="compassButtonLabel"
     ></button>
   </div>
